--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ h1 {
   font-family: 'Press Start 2P', cursive;
 }
 
+h2 {
+  font-family: 'Roboto Mono', monospace;
+}
+
 h1, h2 {
   text-align: center;
 }
