--- a/style.css
+++ b/style.css
@@ -14,30 +14,34 @@ header {
   background-color: grey;
   margin-top: 150px;
   height: 1000px;
-  width: 250px;
+  width: 20%;
+  float: left;
   position: fixed;
+}
+
+.container {
+  margin-top: 150px;
+  height: 1000px;
+  width: 77%;
+  float: right;
 }
 
 .buttons {
   background-color: lightgrey;
+  display: inline-block;
+  margin: 5% 10%;
   height: 50px;
-  width: 200px;
-  radius: 5%;
-  margin: 10px 25px;
-  font-family: 'Baloo Bhaina', cursive;
+  width: 80%;
+  text-align: center;
+
+  font-family: Helvetica, sans-serif;
   font-size: 20px;
-  border-radius: 5%;
+  border-radius: 5px;
+
 }
 
 .buttons:hover {
   background-color: rgba(232, 232, 232, 0.5);
-}
-
-.container {
-  position: absolute;
-  margin-left: 275px;
-  margin-top: 150px;
-  width: 75%;
 }
 
 .colors-bold {
@@ -79,6 +83,14 @@ header {
 
 .plum {
   color: plum;
+}
+
+.nav-button {
+  text-decoration: none;
+}
+
+.left-panel a:visited {
+  color: black;
 }
 
 a:hover {
@@ -144,4 +156,36 @@ a:hover {
 #lh-5 {
   line-height: 5;
   margin-left: 25px;
+}
+
+.four-values {
+  border-radius: 10px 20px 30px 40px;
+  width: 100px;
+  height: 100px;
+  background-color: black;
+  margin-bottom: 20px;
+}
+
+.three-values {
+  border-radius: 10px 20px 30px;
+  width: 100px;
+  height: 100px;
+  background-color: black;
+  margin-bottom: 20px;
+}
+
+.two-values {
+  border-radius: 10px 20px;
+  width: 100px;
+  height: 100px;
+  background-color: black;
+  margin-bottom: 20px;
+}
+
+.one-value {
+  border-radius: 10px;
+  width: 100px;
+  height: 100px;
+  background-color: black;
+  margin-bottom: 20px;
 }
