--- a/style.css
+++ b/style.css
@@ -52,9 +52,6 @@ table {
 }
 
 
-
-
-
 /* ************************************************** */
 /*                       HEADER                       */
 /* ************************************************** */
@@ -66,6 +63,8 @@ header {
   text-align: center;
   padding: 20px 0 20px 0;
   width: 100%;
+  position: fixed;
+  top: 0;
 }
 
 header h1 {
@@ -77,22 +76,26 @@ header h2 {
   margin-top: 10px;
 }
 
-
-.left-panel {
-  background-color: grey;
-  height: 1000px;
-  width: 20%;
-  float: left;
-  position: fixed;
-}
-
-/*
+/* ****************************************************** */
+/*                       MAIN AREA                        */
+/* ****************************************************** */
 
 .container {
-  margin-top: 150px;
+  margin-top: 85px;
+  margin-bottom: 50px;
+
+}
+
+/* ****************************************************** */
+/*                       NAVIGATION                       */
+/* ****************************************************** */
+
+nav {
+  background-color: grey;
+  width: 20%;
   height: 1000px;
-  width: 77%;
-  float: right;
+  float: left;
+  color: black;
 }
 
 .buttons {
@@ -112,6 +115,48 @@ header h2 {
 .buttons:hover {
   background-color: rgba(232, 232, 232, 0.5);
 }
+
+/* *************************************************** */
+/*                       CONTENT                       */
+/* *************************************************** */
+
+.content {
+  width: 80%;
+  height: 1000px;
+  float: right;
+  color: black;
+}
+
+/* ************************************************** */
+/*                       FOOTER                       */
+/* ************************************************** */
+
+footer {
+  position:fixed;
+  color: white;
+  font-size: 10px;
+  background-color:black;
+  text-align: right;
+  bottom:0px;
+  left:0px;
+  right:0px;
+  padding: 20px 15px 20px 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+
 
 .colors-bold {
   display: block;
