--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ a {
 
 .buttons:hover {
   background-color: rgba(232, 232, 232, 0.5);
+  color: rgba(0, 3, 255, 0.55);
 }
 
 /* *************************************************** */
