--- a/style.css
+++ b/style.css
@@ -126,12 +126,13 @@ nav > a {
 /* *************************************************** */
 
 .content {
-  width: 79%;
+  width: 72%;
   height: 1500px;
   float: right;
   color: black;
   padding-top: 20px;
   padding-left: 10px;
+	margin-right: 7%;
 }
 
 .content h1 {
