--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 
 
-
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -173,6 +172,11 @@ nav > a {
 	margin-top: 15px;
 	border: 1px black solid;
 }
+
+.add-res {
+  margin-top: 20px;
+}
+
 
 /* ************************************************** */
 /*                       FOOTER                       */
