--- a/style/javascript-variables-style.css
+++ b/style/javascript-variables-style.css
@@ -12,4 +12,9 @@ ul {
 
 .chrome-variables {
   width: 75%;
+  display: block;
+	margin: 0 auto;
+	border-radius: 5px;
+	margin-top: 15px;
+	border: 1px black solid;
 }
