--- a/style/web-fonts-style.css
+++ b/style/web-fonts-style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Orbitron|VT323');
+@import url('https://fonts.googleapis.com/css?family=VT323');
 
 .note {
   font-weight: bold;
