--- a/style/style.scss
+++ b/style/style.scss
@@ -6,6 +6,7 @@
 @import 'content';
 @import 'footer';
 @import 'border-radius-style';
+@import 'line-height-style';
 @import 'color-style';
 @import 'css-animations';
 @import 'css-transition';
