--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ header {
 nav {
   background-color: grey;
   width: 20%;
-  min-height: 1600px;
+  min-height: 2000px;
   float: left;
   color: black; }
 
@@ -239,6 +239,54 @@ footer {
 
 #new-color {
   color: #9136ff; }
+
+em {
+  font-style: italic; }
+
+strong {
+  font-weight: bold; }
+
+.change-box-color {
+  width: 100px;
+  height: 100px;
+  margin: 5px 0;
+  background-color: red; }
+
+.change-box-color:hover {
+  background-color: blue; }
+
+.css-transitions {
+  font-weight: bold; }
+
+.longer-box {
+  width: 100px;
+  height: 100px;
+  margin: 5px 0;
+  background-color: red;
+  transition: width 2s; }
+
+.longer-box:hover {
+  width: 400px; }
+
+.code-img {
+  margin: 5px 0;
+  width: 200px; }
+
+.make-my-monster-grow {
+  width: 100px;
+  height: 100px;
+  margin: 5px 0;
+  background-color: red;
+  transition: width 2s, height 2s, border-radius 2s, background-color 2s; }
+
+.make-my-monster-grow:hover {
+  width: 300px;
+  height: 300px;
+  border-radius: 100%;
+  background-color: blue; }
+
+.code-img-long {
+  width: 500px; }
 
 .example {
   margin-left: 20px; }
