changed title's back up wifi

--- a/style/_css-transition.scss
+++ b/style/_css-transition.scss
@@ -46,7 +46,7 @@ strong {
     transition: width 2s, height 2s, border-radius 2s, background-color 2s;
 }
 
-.make-my-monster-grow:hover {
+.make-my-monster-grow {
     width: 300px;
     height: 300px;
     border-radius: 100%;
