--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ table {
   border-spacing: 0; }
 
 header {
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Press Start 2P', sans-serif;
   color: white;
   background-color: black;
   text-align: center;
@@ -279,7 +279,7 @@ strong {
   background-color: red;
   transition: width 2s, height 2s, border-radius 2s, background-color 2s; }
 
-.make-my-monster-grow:hover {
+.make-my-monster-grow {
   width: 300px;
   height: 300px;
   border-radius: 100%;
