--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,5 +1,5 @@
 header {
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Press Start 2P', sans-serif;
   color: white;
   background-color: black;
   text-align: center;
