added chain chomp bitey to css transition

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ header {
 nav {
   background-color: grey;
   width: 20%;
-  min-height: 2000px;
+  min-height: 2400px;
   float: left;
   color: black; }
 
@@ -240,6 +240,27 @@ footer {
 #new-color {
   color: #9136ff; }
 
+.arena {
+  height: 200px;
+  width: 800px;
+  outline: 1px solid black; }
+
+.ball {
+  height: 200px;
+  width: 200px;
+  border-radius: 100%;
+  background-color: black;
+  animation-duration: 2s;
+  animation-name: slidein;
+  animation-iteration-count: infinite;
+  animation-direction: alternate; }
+
+@keyframes slidein {
+  from {
+    margin-left: 75%; }
+  to {
+    margin-left: 0%; } }
+
 em {
   font-style: italic; }
 
@@ -287,6 +308,22 @@ strong {
 
 .code-img-long {
   width: 500px; }
+
+.bite-text {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold; }
+
+.bite {
+  display: block;
+  margin: 10px auto;
+  width: 100px;
+  height: 100px;
+  transition: width 2s, height 2s; }
+
+.bite:hover {
+  width: 500px;
+  height: 500px; }
 
 .example {
   margin-left: 20px; }
