--- a/style/_css-transition.scss
+++ b/style/_css-transition.scss
@@ -58,3 +58,22 @@ strong {
 .code-img-long {
   width: 500px;
 }
+
+.bite-text {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.bite {
+  display: block;
+  margin: 10px auto;
+  width: 100px;
+  height: 100px;
+  transition: width 2s, height 2s;
+}
+
+.bite:hover {
+  width: 500px;
+  height: 500px;
+}
