--- a/style/_css-animations.scss
+++ b/style/_css-animations.scss
@@ -1,1 +1,85 @@
- 
+//
+// .move {
+//     width: 500px;
+//     height: 500px;
+//     background-color: red;
+//     animation-name: example;
+//     animation: pulse .25s infinite;
+// }
+//
+// @keyframes pulse {
+//   0% {
+//     background-color: #001F3F;
+//   }
+//   25% {
+//     background-color: rgb(0, 255, 240);
+//   }
+//   50% {
+//     background-color: rgb(0, 69, 13);
+//     border-radius: 50%;
+//   }
+//   75% {
+//     background-color: rgb(55, 0, 69);
+//   }
+//   100% {
+//     background-color: #FF4136;
+//     border-radius: 100%;
+//   }
+// }
+
+
+.make-red {
+  list-style: decimal;
+  list-style-position: inside;
+  line-height: 2;
+}
+
+.arena {
+  height: 200px;
+  width: 100%;
+  margin: 10px 0;
+}
+
+.ghost {
+  height: 200px;
+  width: 200px;
+  background-color: black;
+  animation-duration: 2s;
+  animation-name: ghost;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+
+}
+
+@keyframes ghost {
+  from {
+    margin-left: 75%;
+  }
+
+  to {
+    margin-left: 0%;
+  }
+}
+
+.mr-red-box {
+  height: 100px;
+  width: 100px;
+  margin-bottom: 10px;
+  background-color: red;
+  animation-name: to-mr-blue-box;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes to-mr-blue-box {
+  from {
+  }
+  to {
+    background-color: blue;
+  }
+}
+
+.mrb-code {
+  width: 300px;
+}
